# chessAI

./: .gitignore  README.md  pyproject.toml
chessai/: engine.py  game.ipynb  model.ipynb  network.py  play.ipynb  viz.ipynb
chessai/data/: database.py  dataset.py  download.py  download_gm_games.py  download_lichess.py
tests/: test_chessai.py
tests/data/fen/: mate2.fen
